--- a/styles-dev.css
+++ b/styles-dev.css
@@ -2526,47 +2526,55 @@ li.internal-users-alt img {
   border-top: 1px solid #46502b;
   margin: 0;
   padding: 0;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
   overflow: hidden;
   text-align: center;
   background: #64933a url(images/texture-1.png);
   list-style-type: none;
 }
-/* line 462, sass/modules/_header.scss */
+/* line 463, sass/modules/_header.scss */
+.secondary-nav-list > li {
+  -webkit-flex-grow: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+}
+/* line 466, sass/modules/_header.scss */
 .secondary-nav-list > li:first-child {
   margin-top: 0.71315146386224em;
 }
-/* line 466, sass/modules/_header.scss */
+/* line 470, sass/modules/_header.scss */
 .secondary-nav-list > li:last-child {
   margin-bottom: 1.42630292772448em;
 }
 @media screen and (min-width: 20em) {
-  /* line 471, sass/modules/_header.scss */
+  /* line 476, sass/modules/_header.scss */
   .secondary-nav-list > li:first-child,
   .secondary-nav-list > li:last-child {
     margin: 0;
   }
-  /* line 476, sass/modules/_header.scss */
+  /* line 481, sass/modules/_header.scss */
   .secondary-nav-list > li {
     margin: 0;
     width: 25%;
     float: left;
-    line-height: 2.85260585544895;
   }
 }
 @media screen and (min-width: 22em) {
   /* line 448, sass/modules/_header.scss */
   .secondary-nav-list {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
     -webkit-justify-content: flex-end;
         -ms-flex-pack: end;
             justify-content: flex-end;
   }
-  /* line 491, sass/modules/_header.scss */
+  /* line 496, sass/modules/_header.scss */
   .secondary-nav-list > li {
     width: auto;
     display: inline-block;
+    -webkit-flex-grow: 0;
+        -ms-flex-positive: 0;
+            flex-grow: 0;
     float: none;
     white-space: nowrap;
   }
@@ -2578,7 +2586,7 @@ li.internal-users-alt img {
   }
 }
 @media screen and (min-width: 43em) {
-  /* line 507, sass/modules/_header.scss */
+  /* line 513, sass/modules/_header.scss */
   .secondary-nav-list > li {
     font-size: 0.875rem;
     line-height: 1.42857142857143;
@@ -2586,17 +2594,16 @@ li.internal-users-alt img {
   }
 }
 
-/* line 515, sass/modules/_header.scss */
+/* line 522, sass/modules/_header.scss */
 .secondary-nav-link, .secondary-nav-link:visited {
   border-bottom: 0;
   height: 100%;
   width: 100%;
-  display: block;
   color: white;
   font-weight: normal;
 }
 @media screen and (min-width: 22em) {
-  /* line 515, sass/modules/_header.scss */
+  /* line 522, sass/modules/_header.scss */
   .secondary-nav-link, .secondary-nav-link:visited {
     height: auto;
     padding: 0 1em;
@@ -2604,20 +2611,20 @@ li.internal-users-alt img {
   }
 }
 @media screen and (min-width: 70em) {
-  /* line 515, sass/modules/_header.scss */
+  /* line 522, sass/modules/_header.scss */
   .secondary-nav-link, .secondary-nav-link:visited {
     font-size: inherit;
     line-height: inherit;
   }
 }
-/* line 541, sass/modules/_header.scss */
+/* line 548, sass/modules/_header.scss */
 .secondary-nav-link:hover {
   background-color: #857192;
   color: white;
   box-shadow: 0 0 2px rgba(253, 244, 182, 0.5) inset;
   transition: all .1s ease-out;
 }
-/* line 551, sass/modules/_header.scss */
+/* line 558, sass/modules/_header.scss */
 .secondary-nav-link:focus {
   background-color: #492c5d;
 }
@@ -2628,12 +2635,12 @@ li.internal-users-alt img {
  * The name of the department’s site, e.g. About Evergreen, Web
  * Resources, or Registration
  */
-/* line 562, sass/modules/_header.scss */
+/* line 569, sass/modules/_header.scss */
 .site-name {
   margin-top: 3.75rem;
 }
 @media screen and (min-height: 35em) {
-  /* line 565, sass/modules/_header.scss */
+  /* line 572, sass/modules/_header.scss */
   .site-name h1 {
     margin-bottom: 0.673904em;
   }
